samples/_failures_safe/1761040494_145213_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12e2785f.c: In function ‘main’:
./samples/SAFE/__tmp_12e2785f.c:165:12: error: missing terminating " character
  165 |     printf("Enter text to analyze (max 409
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_12e2785f.c:165:5: error: expected expression at end of input
  165 |     printf("Enter text to analyze (max 409
      |     ^~~~~~
./samples/SAFE/__tmp_12e2785f.c:165:5: error: expected declaration or statement at end of input
